Manejo de Etiquetas Multimedia
Se incluye al archivo Index.html las etiquetas de <img>, <video>, y <audio>, se crea y se agrega contenido al directorio img en nuestro proyecto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Jonathan Arias Hernandez</title>
 </head>
 <body>
+
+    <header>
+        <img src="img/portada.jpg" alt="Portada para mi página">
+    </header>
+    
+    <section>
+        <article>
+            <video src="img/laCarreta.mp4" controls="controls"></video>
+        </article>
+
+        <article>
+            <p>Te invito a escuchar un audio libro de crecimiento personal... </p>
+            <audio src="img/joseBobadilla.mp3" controls="controls"></audio>
+        </article>
+    </section>
     
 </body>
 </html>
